--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "connect-flash": "^0.1.1",
     "cookie-session": "^2.0.0-alpha.1",
     "dotenv": "^2.0.0",
+    "emailjs": "^1.0.4",
     "express": "^4.13.4",
     "morgan": "^1.7.0",
     "nunjucks": "^2.4.2"
